--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+c{
   "name": "moz-todo-react",
   "version": "0.1.0",
   "private": true,
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
