--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-c{
+{
   "name": "moz-todo-react",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +15,9 @@ c{
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +39,6 @@ c{
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "homepage": "https://takencc.github.com/moz-todo-react"
 }
